2016-02-19  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (sysmalloc): Do not update arena_max.
	* malloc/arena.c (arena_max): Remove.
	(heap_trim, _int_new_arena): Do not update arena_max.

2016-02-19  Florian Weimer  <fweimer@redhat.com>

	* resolv/res_init.c (res_ninit): Update comment.

2016-02-19  Florian Weimer  <fweimer@redhat.com>

	[BZ #19505]
	* posix/spawn_int.h: Add headers and include guard.
	(__spawn_valid_fd): New function.
	* posix/spawn_faction_addopen.c
	(posix_spawn_file_actions_addopen): Use __spawn_valid_fd.
	* posix/spawn_faction_addclose.c
	(posix_spawn_file_actions_addclose): Likewise.
	* posix/spawn_faction_adddup2.c
	(posix_spawn_file_actions_adddup2): Likewise.  Add check for
	second file descriptor.
	* posix/spawn_valid_fd.c: New file.
	* posix/tst-posix_spawn-fd.c: New file.
	* posix/Makefile (routines): Add spawn_valid_fd.
	(tests): Add tst-posix_spawn-fd.

2016-02-19  Florian Weimer  <fweimer@redhat.com>

	* malloc/tst-malloc-thread-exit.c: Include test-skeleton.c early.
	(do_test): Limit the number of arenas, so that we can use fewer
	outer threads.  Limit timeout to 3 seconds, in preparation for a
	larger TIMEOUT value.

2016-02-19  Joseph Myers  <joseph@codesourcery.com>

	[BZ #19674]
	* sysdeps/ieee754/ldbl-128ibm/e_powl.c (__ieee754_powl): Include
	sign in overflowing and underflowing results when overflow or
	underflow is detected early.  Include sign in result before rather
	than after scaling.

	[BZ #19603]
	* sysdeps/ieee754/ldbl-128ibm/e_remainderl.c
	(__ieee754_remainderl): Adjust sign of integer version of low part
	when taking absolute value of high part.
	* sysdeps/ieee754/ldbl-128ibm/s_remquol.c (__remquol): Likewise.
	* math/libm-test.inc (remainder_test_data): Add another test.
	(remquo_test_data): Likewise.

2016-02-18  Joseph Myers  <joseph@codesourcery.com>

	[BZ #19602]
	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c (__ieee754_fmodl): Handle
	equal high parts and both low parts zero specially.